--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
     <body> 
         <h1>Gerenciamento de hoteis</h1> 
         <ul> 
-            <li>Listar todos Os hoteis</li> 
+            <li>Listar todos os hoteis</li> 
             <li>Adicionar um novo hotel</li> 
         </ul> 
     </body> 
