--- a/web/index.html
+++ b/web/index.html
@@ -7,8 +7,8 @@
     <body> 
         <h1>Gerenciamento de hoteis</h1> 
         <ul> 
-            <li><a href="/HotelWeb/ListarHoteisServlet">Listar todos os hoteis</a></li> 
-            <li>Adicionar um novo hotel</li> 
+            <li><a href="/HotelWeb/ListarHoteisServlet">Listar todos os hoteis</a></li>
+            <li><a href="/HotelWeb/adicionar_novo.html">Adicionar um novo hotel</a></li> 
         </ul> 
     </body> 
 </html> 
